--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 	<body>
-		<h1> This is nginx server </h1>
+		<h2 style="color: green"> Java Home App, Deploy through Ansible !!</h2
 	</body
 </html>
